--- a/public/index.html
+++ b/public/index.html
@@ -9,33 +9,32 @@
 
 <body>
   <main id="main" class="main">
-    <nav class="navbar">
-      <a href="/">Inicial</a>
-      <a href="/roteiros/alta-temporada">Roteiros Alta Temporada</a>
-      <a href="/roteiros/baixa-temporada">Roteiros Baixa Temporada</a>
-      <a href="/roteiros/especiais">Roteiros Especiais</a><a href="/roteiros/promocionais">Roteiros Promocionais</a>
-      <a href="/atividades">Atividades</a><a href="/contatos">Contatos</a>
-    </nav>
-    <ol itemscope="" itemtype="http://schema.org/BreadcrumbList" class="breadcrumb"><li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a class="breadcrumb-link" itemtype="http://schema.org/Thing" itemprop="item" href="/"><span itemprop="name">Inicial</span></a><meta itemprop="position" content="1"></li><li> &gt; </li><li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a class="breadcrumb-link" itemtype="http://schema.org/Thing" itemprop="item" href="/roteiros"><span itemprop="name">Roteiros</span></a><meta itemprop="position" content="1"></li><li> &gt; </li><li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a class="breadcrumb-link" itemtype="http://schema.org/Thing" itemprop="item" href="/roteiros/especiais"><span itemprop="name">Roteiros Especiais</span></a><meta itemprop="position" content="2"></li><li> &gt; </li><li itemprop="itemListElement" itemscope="" itemtype="http://schema.org/ListItem"><a class="breadcrumb-link-thispage" itemtype="http://schema.org/Thing" itemprop="item" href="/roteiros/especiais/passeios"><span itemprop="name">Passeios de um dia</span></a><meta itemprop="position" content="3"></li></ol>
-    <header class="section main-header">
-      <h1>Passeios de um dia</h1>
-      <p class="paragraph">A Savanah EcoTurismo oferece passeios para os melhores atrativos de Pirenópolis. Para você, sua família ou em grupos. Passeios na natureza, conhecendo o cerrado e visitando Reservas Ecológicas, Serras, Mirantes e Cachoeiras. Passeios Históricos conhecendo Museus, Festas Folclóricas, Igrejas, ruas antigas e Fazendas Coloniais.  </p>
-    </header>
     <section class="webPageElement section-descriptive" style="">
       <h2 class="webPageElement-title">Tour Histórico Cultural - Fazenda Babilônia</h2>
       <figure class="webPageElement-representativeOfPage">
         <img alt="" sizes="(min-width: 800px) 800px, (min-width: 720px) 720px" 
         srcset="//localhost/src/static/images/thumbs/centroHistorico_IgrejaMatriz(2)(800w480).jpg 800w, 
         //localhost/src/static/images/thumbs/centroHistorico_IgrejaMatriz(2)(720w432).jpg 720w" src="//localhost/src/static/images/thumbs/centroHistorico_IgrejaMatriz(2)(800w480).jpg" 
-        data-source="/src/static/images/centroHistorico_IgrejaMatriz(2).jpg" data-caption="" style="cursor: pointer;">
+        data-source="/src/static/images/centroHistorico_IgrejaMatriz(2).jpg" data-caption="Igreja Matriz Igreja Matriz Igreja Matriz Igreja Matriz Igreja Matriz Igreja Matriz Igreja Matriz Igreja Matriz Igreja Matriz Igreja Matriz " style="cursor: pointer;">
+        <figcaption>IGREJA MATRIZ</figcaption>
       </figure>
       <div class="webPageElement-text">
-          <p>MUSEUS - IGREJAS - CASARÕES COLONIAIS e GASTRONOMIA do SÉC. XVIII</p>
-<p><b>Horário</b> - Saída -  10h00  -  Retorno - 16h00<br>
-<b>Preço</b> por Pessoa - R$ 230,00<br>
-<b>Inclui</b>: Transporte - Guia Credenciado - Taxa dos Museus - Café Colonial na Faz. Babilônia</p>
-<p>Dia dedicado a passeio histórico cultural e gastronômico. Após café da manhã na pousada, visitaremos o centro histórico, tombado pelo IPHAN em 1989, museus, igrejas, festas folclóricas, casarões coloniais, monumentos históricos dos sécs. XVIII e XIX. Na caminhada conheceremos o rico artesanato local. Após, faremos um deslocamento de 25 km em estrada de asfalto até a 
-primeira grande fazenda da Província de Goiás, fundada em 1795, tem casarão e engenho construídos no final do séc. XVIII. No local, vamos degustar o delicioso e farto Café Colonial de mais de 40 itens, um verdadeiro resgate gastronômico das receitas dos escravos, sinhas e tropeiros que faziam comercio de Pirenópolis ao Rio de Janeiro pelas estradas colonias, imperiais e reais.</p></div><figure class="webPageElement-figure"><img alt="Image: fazendaBabilonia01.jpg" sizes="(min-width: 432px) 432px" srcset="//localhost/src/static/images/thumbs/fazendaBabilonia01(432w388).jpg 432w" src="//localhost/src/static/images/thumbs/fazendaBabilonia01(432w388).jpg" data-source="/src/static/images/fazendaBabilonia01.jpg" data-caption="" style="cursor: pointer;"></figure><figure class="webPageElement-figure"><img alt="Image: centroHistorico_RuaAurora(1).jpg" sizes="(min-width: 432px) 432px" srcset="//localhost/src/static/images/thumbs/centroHistorico_RuaAurora(1)(432w388).jpg 432w" src="//localhost/src/static/images/thumbs/centroHistorico_RuaAurora(1)(400w359).jpg" data-source="/src/static/images/centroHistorico_RuaAurora(1).jpg" data-caption="" style="cursor: pointer;"></figure></section><section class="webPageElement section-descriptive" style=""><h2 class="webPageElement-title">Cachoeiras da Serra dos Pireneus.</h2><figure class="webPageElement-representativeOfPage"><img alt="" sizes="(min-width: 458px) 458px" srcset="//localhost/src/static/images/thumbs/p004_0_00_02(458w274).jpg 458w" src="//localhost/src/static/images/thumbs/p004_0_00_02(458w274).jpg" data-source="/src/static/images/p004_0_00_02.jpg" data-caption="" style="cursor: pointer;"></figure><div class="webPageElement-text"><p>RPPN VARGEM GRANDE - RESERVA do ABADE - PARQUE do COQUEIRO </p>
+        <p>MUSEUS - IGREJAS - CASARÕES COLONIAIS e GASTRONOMIA do SÉC. XVIII</p>
+        <p><b>Horário</b> - Saída -  10h00  -  Retorno - 16h00<br>
+        <b>Preço</b> por Pessoa - R$ 230,00<br>
+        <b>Inclui</b>: Transporte - Guia Credenciado - Taxa dos Museus - Café Colonial na Faz. Babilônia</p>
+        <p>Dia dedicado a passeio histórico cultural e gastronômico. Após café da manhã na pousada, visitaremos o centro histórico, tombado pelo IPHAN em 1989, museus, igrejas, festas folclóricas, casarões coloniais, monumentos históricos dos sécs. XVIII e XIX. Na caminhada conheceremos o rico artesanato local. Após, faremos um deslocamento de 25 km em estrada de asfalto até a primeira grande fazenda da Província de Goiás, fundada em 1795, tem casarão e engenho construídos no final do séc. XVIII. No local, vamos degustar o delicioso e farto Café Colonial de mais de 40 itens, um verdadeiro resgate gastronômico das receitas dos escravos, sinhas e tropeiros que faziam comercio de Pirenópolis ao Rio de Janeiro pelas estradas colonias, imperiais e reais.</p>
+      </div>
+      <figure class="webPageElement-figure">
+        <img alt="Image: fazendaBabilonia01.jpg" sizes="(min-width: 432px) 432px" srcset="//localhost/src/static/images/thumbs/fazendaBabilonia01(432w388).jpg 432w" src="//localhost/src/static/images/thumbs/fazendaBabilonia01(432w388).jpg" data-source="/src/static/images/fazendaBabilonia01.jpg" data-caption="Fazenda Babilônia" style="cursor: pointer;">
+        <figcaption>Fazenda Babilônia</figcaption>
+      </figure>
+      <figure class="webPageElement-figure">
+        <img alt="Image: centroHistorico_RuaAurora(1).jpg" sizes="(min-width: 432px) 432px" srcset="//localhost/src/static/images/thumbs/centroHistorico_RuaAurora(1)(432w388).jpg 432w" src="//localhost/src/static/images/thumbs/centroHistorico_RuaAurora(1)(400w359).jpg" data-source="/src/static/images/centroHistorico_RuaAurora(1).jpg" data-caption="Rua Aurora" style="cursor: pointer;">
+        <figcaption>Rua Aurora</figcaption>
+      </figure>
+    </section>
+    <section class="webPageElement section-descriptive" style=""><h2 class="webPageElement-title">Cachoeiras da Serra dos Pireneus.</h2><figure class="webPageElement-representativeOfPage"><img alt="" sizes="(min-width: 458px) 458px" srcset="//localhost/src/static/images/thumbs/p004_0_00_02(458w274).jpg 458w" src="//localhost/src/static/images/thumbs/p004_0_00_02(458w274).jpg" data-source="/src/static/images/p004_0_00_02.jpg" data-caption="" style="cursor: pointer;"></figure><div class="webPageElement-text"><p>RPPN VARGEM GRANDE - RESERVA do ABADE - PARQUE do COQUEIRO </p>
 <p>CAMINHADAS - NASCENTES - 09 CACHOEIRAS - CONTEMPLAÇÃO - SUSTENTABILIDADE</p>
 <p><b>Horário</b> - Saída - 09h30 - Retorno - 17h00<br>
 <b>Preço</b> por Pessoa - R$ 280,00<br>
@@ -50,7 +49,9 @@ primeira grande fazenda da Província de Goiás, fundada em 1795, tem casarão e
 
 <p>Em seguida vamos ao Parque dos Pireneus, nosso destino tem vegetação de cerrado de altitude, trilhas naturais que passam por campos úmidos floridos, cerrado rupestre, veredas, finalizamos o dia no segundo lugar mais alto do Centro Oeste Brasileiro, o pico dos Pireneus com 1.400 m de altitude, exuberantes paredões coloridos com milhões de anos.</p><p>
 
-</p><p>Trilhas com dificuldade Media.</p><p></p></div><figure class="webPageElement-figure"><img alt="Image: 20180112_110208.jpg" sizes="(min-width: 324px) 324px" srcset="//localhost/src/static/images/aventura/thumbs/20180112_110208(324w226).jpg 324w" src="//localhost/src/static/images/aventura/thumbs/20180112_110208(324w226).jpg" data-source="/src/static/images/aventura/20180112_110208.jpg" data-caption="" style="cursor: pointer;"></figure><figure class="webPageElement-figure"><img alt="" sizes="(min-width: 219px) 219px" srcset="//localhost/src/static/images/thumbs/54(219w153).jpg 219w" src="//localhost/src/static/images/thumbs/54(219w153).jpg" data-source="/src/static/images/54.jpg" data-caption="" style="cursor: pointer;"></figure></section><section class="webPageElement section-descriptive" style=""><h2 class="webPageElement-title"> Vargem Grande - Pôr do Sol nos Pireneus</h2><figure class="webPageElement-representativeOfPage"><img alt="" sizes="(min-width: 480px) 480px" srcset="//localhost/src/static/images/atrativos/thumbs/IMG-20160729-WA0004(480w288).jpg 480w" src="//localhost/src/static/images/atrativos/thumbs/IMG-20160729-WA0004(480w288).jpg" data-source="/src/static/images/atrativos/IMG-20160729-WA0004.jpg" data-caption="" style="cursor: pointer;"></figure><div class="webPageElement-text"><p>CAMINHADAS - NASCENTES - CACHOEIRAS - CONTEMPLAÇÃO - PÔR do SOL</p>
+</p><p>Trilhas com dificuldade Media.</p><p></p>
+</div>
+<figure class="webPageElement-figure"><img alt="Image: 20180112_110208.jpg" sizes="(min-width: 324px) 324px" srcset="//localhost/src/static/images/aventura/thumbs/20180112_110208(324w226).jpg 324w" src="//localhost/src/static/images/aventura/thumbs/20180112_110208(324w226).jpg" data-source="/src/static/images/aventura/20180112_110208.jpg" data-caption="" style="cursor: pointer;"></figure><figure class="webPageElement-figure"><img alt="" sizes="(min-width: 219px) 219px" srcset="//localhost/src/static/images/thumbs/54(219w153).jpg 219w" src="//localhost/src/static/images/thumbs/54(219w153).jpg" data-source="/src/static/images/54.jpg" data-caption="" style="cursor: pointer;"></figure></section><section class="webPageElement section-descriptive" style=""><h2 class="webPageElement-title"> Vargem Grande - Pôr do Sol nos Pireneus</h2><figure class="webPageElement-representativeOfPage"><img alt="" sizes="(min-width: 480px) 480px" srcset="//localhost/src/static/images/atrativos/thumbs/IMG-20160729-WA0004(480w288).jpg 480w" src="//localhost/src/static/images/atrativos/thumbs/IMG-20160729-WA0004(480w288).jpg" data-source="/src/static/images/atrativos/IMG-20160729-WA0004.jpg" data-caption="" style="cursor: pointer;"></figure><div class="webPageElement-text"><p>CAMINHADAS - NASCENTES - CACHOEIRAS - CONTEMPLAÇÃO - PÔR do SOL</p>
 <p><b>Horário</b> - Saída - 13h00 - Retorno - 19h00<br>
 <b>Preço</b> por pessoa - R$ 200,00<br>
 <b>Inclui</b>: Transporte - Guia Credenciado - Taxa de entrada</p>
